# elementpath

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  publiccode.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test_elementpath.py  tox.ini
.github/workflows/: test-elementpath.yml
doc/: Makefile  advanced.rst  conf.py  index.rst  introduction.rst  make.bat  pratt_api.rst  xpath_api.rst
elementpath/: __init__.py  _typing.py  aliases.py  collations.py  compare.py  compat.py  context.py  datatypes.py  decoder.py  etree.py  exceptions.py  helpers.py  namespaces.py  protocols.py  schema_proxy.py  sequence_types.py  sequences.py  serialization.py  tdop.py  tdop_parser.py  todp_parser.py  tree_builders.py  utils.py  xpath1.py  xpath1_parser.py  xpath2.py  xpath2_constructors.py  xpath2_functions.py  xpath2_parser.py  xpath3.py  xpath_base.py  xpath_context.py  xpath_helpers.py  xpath_nodes.py  xpath_selectors.py  xpath_token.py  xpath_tokens.py  xpath_types.py  xsd_types.py
elementpath/datatypes/: __init__.py  any_types.py  atomic_types.py  binary.py  (+11 more)
profiling/: memray_node_tree.py  profile_character_classes.py  profile_datatypes.py  profile_empty_sequence.py  profile_null_values.py  profile_unicode_subsets.py  profile_xpath_context.py  profile_xpath_nodes.py  profile_xpath_parsers.py  profile_xpath_tokens.py
scripts/: generate_codepoints.py
tests/: execute_w3c_tests.py  memory_profiling.py  run_all_tests.py  run_typing_tests.py  run_w3c_tests.py  test_collations.py  test_compare.py  test_context.py  test_contexts.py  test_datatypes.py  test_decoder.py  test_elementpath.py  test_etree.py  test_exceptions.py  test_helpers.py  test_namespaces.py  test_package.py  test_pathnodes.py  test_regex.py  test_schema_context.py  test_schema_proxy.py  test_selectors.py  test_sequence_types.py  test_sequences.py  test_serialization.py  test_tdop_parser.py  test_tree_builders.py  test_typing.py  test_validators.py  test_xpath1_parser.py  test_xpath2_constructors.py  test_xpath2_functions.py  test_xpath2_parser.py  test_xpath3.py  test_xpath30.py  test_xpath31.py  test_xpath_context.py  test_xpath_nodes.py  test_xpath_token.py  test_xpath_tokens.py  (+1 more)
(+66 files in other folders)
